2025-08-05T12:52:20Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16750584138 # 1142
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 27 57
* notice: prev accum: outdated-unq outdated-all / unq all: 4500 9317 / 4546 9371
* notice: next accum: outdated-unq outdated-all / unq all: 4500 9317 / 4550 9376
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -1 -1 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [] / [2025-07-22 2025-08-05]

2025-08-05T02:03:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16738643619 # 1141
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 25 53
* notice: prev accum: outdated-unq outdated-all / unq all: 4500 9317 / 4545 9370
* notice: next accum: outdated-unq outdated-all / unq all: 4500 9317 / 4546 9371
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-22 2025-08-04]

2025-08-04T12:52:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16723676226 # 1140
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-04
* notice: last 14d: unq all: 25 53
* notice: prev accum: outdated-unq outdated-all / unq all: 4494 9310 / 4545 9370
* notice: next accum: outdated-unq outdated-all / unq all: 4500 9317 / 4545 9370
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-21] / []

2025-08-04T02:08:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16712323042 # 1139