@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-07-24T01:57:28Z",
-  "count" : 3,
+  "timestamp" : "2025-08-06T02:01:01Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
