@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-08-05T12:52:20Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
-  "uniques" : 4,
-  "uniques_minmax" : [ 4, 4 ],
-  "uniques_decinc" : [ -0, +4 ]
+  "timestamp" : "2025-08-06T02:01:01Z",
+  "count" : 7,
+  "count_minmax" : [ 5, 7 ],
+  "count_decinc" : [ -0, +7 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 4, 5 ],
+  "uniques_decinc" : [ -0, +5 ]
 }
