@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-08-05T12:52:20Z",
-  "count_outdated" : 9317,
-  "uniques_outdated" : 4500,
-  "count" : 9376,
-  "uniques" : 4550,
+  "timestamp" : "2025-08-06T02:01:01Z",
+  "count_outdated" : 9324,
+  "uniques_outdated" : 4505,
+  "count" : 9378,
+  "uniques" : 4551,
   "clones" : [
     {
-      "timestamp": "2025-07-22T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 7 ],
-      "count_decinc": [ 2, 7 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 5 ],
-      "uniques_decinc": [ 2, 5 ]
-    },
-    {
       "timestamp": "2025-07-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-08-05T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
-      "count_decinc": [ 0, 5 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "count": 7,
+      "count_minmax": [ 5, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 5,
+      "uniques_minmax": [ 4, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
