@@ -1,15 +1,10 @@
 {
-  "count": 57,
-  "uniques": 27,
+  "count": 53,
+  "uniques": 26,
   "clones": [
     {
-      "timestamp": "2025-07-22T00:00:00Z",
-      "count": 5,
-      "uniques": 3
-    },
-    {
       "timestamp": "2025-07-23T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-08-05T00:00:00Z",
-      "count": 5,
-      "uniques": 4
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
